--- a/html/registertutor.html
+++ b/html/registertutor.html
@@ -1204,7 +1204,7 @@
             var sex = $('#dropdownSex option:selected').val();
             var uniId = parseInt($('#dropdownUniversity option:selected').val());
             var facId = parseInt($('#dropdownFaculty option:selected').val());
-            var turClip = "";//$('#txtClip').val();
+            var turClip = $('#txtClip').val();
             var inputIDCardFile = $('#inputIDCardFile').val();
 
             if (txtPassword != txtConfirmPassword) {
